# sdec

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  WIRE_FORMAT.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
bitstream/: Cargo.toml
bitstream/src/: error.rs  lib.rs  reader.rs  writer.rs
bitstream/tests/: prop_roundtrip.rs  roundtrip.rs
codec/: Cargo.toml
codec/src/: baseline.rs  delta.rs  error.rs  lib.rs  limits.rs  scratch.rs  session.rs  snapshot.rs  types.rs
codec/tests/: delta_sparse_integration.rs  full_snapshot_integration.rs  session_chaos.rs
demo-schema/: Cargo.toml
demo-schema/src/: lib.rs
demo-sim/: Cargo.toml
demo-sim/src/: main.rs
docs/: getting-started.md  protocol.md  recovery.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bitreader.rs  session_packet.rs
repgraph/: Cargo.toml
repgraph/src/: lib.rs
repgraph/tests/: repgraph_delta.rs  repgraph_integration.rs
schema/: Cargo.toml
schema/src/: error.rs  field.rs  hash.rs  lib.rs  schema.rs
sdec-bevy/: Cargo.toml  README.md
sdec-bevy-demo/: Cargo.toml
sdec-bevy-demo/src/: main.rs
sdec-bevy/src/: apply.rs  extract.rs  lib.rs  mapping.rs  metrics.rs  replicator.rs  schema.rs
simbench/: Cargo.toml
simbench/benches/: encode_decode.rs
simbench/src/: lib.rs  main.rs
tools/: Cargo.toml
tools/src/: lib.rs  main.rs
wire/: Cargo.toml
wire/src/: error.rs  header.rs  lib.rs  limits.rs  packet.rs  session.rs
