[package]
name = "demo-sim"
description = "Deterministic demo simulation for sdec captures"
publish = false
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "demo-sim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
codec.workspace = true
demo-schema = { path = "../demo-schema", version = "0.7.0" }
schema = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tools.workspace = true
wire.workspace = true
