[package]
name = "sdec-repgraph"
description = "Replication graph and interest management for sdec"
readme = "../README.md"
keywords = ["netcode", "replication", "interest-management", "delta", "snapshot"]
categories = ["network-programming", "game-development", "encoding"]
documentation = "https://docs.rs/sdec-repgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "repgraph"

[dependencies]
codec.workspace = true
schema.workspace = true

[dev-dependencies]
wire.workspace = true
