[package]
name = "sdec-schema"
description = "Replication schema and field codec definitions for the sdec codec"
readme = "../README.md"
keywords = ["netcode", "schema", "replication", "snapshot", "delta"]
categories = ["network-programming", "game-development", "encoding"]
documentation = "https://docs.rs/sdec-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "schema"

[dependencies]
blake3 = "1.5.0"

[dev-dependencies]
proptest.workspace = true
