[package]
name = "sdec-bevy-demo"
description = "Bevy ECS demo harness for sdec"
readme = "../README.md"
keywords = ["bevy", "replication", "demo", "delta", "snapshot"]
categories = ["game-development", "network-programming", "encoding"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sdec-bevy-demo"
path = "src/main.rs"

[[bin]]
name = "sdec-bevy-demo-lightyear-full"
path = "src/bin/lightyear_full.rs"
required-features = ["lightyear-full"]

[features]
lightyear-full = ["dep:bevy", "dep:lightyear", "dep:crossbeam-channel"]

[dependencies]
anyhow = "1.0"
bevy_ecs = "0.18"
bincode = "1.3"
bitcode = "0.6.9"
clap = { version = "4.5.2", features = ["derive"] }
bitstream.workspace = true
codec.workspace = true
repgraph.workspace = true
schema.workspace = true
sdec-bevy = { path = "../sdec-bevy", version = "0.7.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
wire.workspace = true
bevy = { version = "0.18", default-features = false, features = ["multi_threaded"], optional = true }
lightyear = { version = "0.26.4", features = ["crossbeam", "netcode"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }
