[package]
name = "sdec-tools"
description = "Introspection and debugging tools for the sdec codec"
readme = "../README.md"
keywords = ["netcode", "tools", "snapshot", "delta", "debugging"]
categories = ["network-programming", "game-development", "encoding"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitstream.workspace = true
wire.workspace = true
schema = { workspace = true, features = ["serde"] }
codec.workspace = true
anyhow = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
glob = "0.3"

[[bin]]
name = "sdec-tools"
path = "src/main.rs"

[dev-dependencies]
